--- a/package.json
+++ b/package.json
@@ -32,19 +32,21 @@
   },
   "homepage": "https://github.com/georgylobko/fit-progress#readme",
   "devDependencies": {
-    "@types/koa": "^2.0.49",
-    "@types/koa-bodyparser": "^4.3.0",
-    "@types/koa-router": "^7.0.42",
-    "@types/node": "^12.7.2",
-    "eslint": "^6.2.1",
-    "eslint-plugin-import": "^2.18.2",
-    "nodemon": "^1.19.1",
-    "ts-node": "^8.3.0",
-    "typescript": "^3.5.3"
+    "@types/config": "0.0.34",
+    "@types/koa": "2.0.49",
+    "@types/koa-bodyparser": "4.3.0",
+    "@types/koa-router": "7.0.42",
+    "@types/node": "12.7.2",
+    "eslint": "6.2.1",
+    "eslint-plugin-import": "2.18.2",
+    "nodemon": "1.19.1",
+    "ts-node": "8.3.0",
+    "typescript": "3.5.3"
   },
   "dependencies": {
-    "koa": "^2.8.1",
-    "koa-bodyparser": "^4.2.1",
-    "koa-router": "^7.4.0"
+    "config": "3.2.2",
+    "koa": "2.8.1",
+    "koa-bodyparser": "4.2.1",
+    "koa-router": "7.4.0"
   }
 }
