--- a/package.json
+++ b/package.json
@@ -32,12 +32,15 @@
   },
   "homepage": "https://github.com/georgylobko/fit-progress#readme",
   "devDependencies": {
+    "@types/bluebird": "3.5.27",
     "@types/config": "0.0.34",
     "@types/koa": "2.0.49",
     "@types/koa-bodyparser": "4.3.0",
     "@types/koa-router": "7.0.42",
+    "@types/lodash": "4.14.137",
     "@types/node": "12.7.2",
     "@types/sequelize": "4.28.4",
+    "@types/validator": "10.11.3",
     "eslint": "6.2.1",
     "eslint-plugin-import": "2.18.2",
     "nodemon": "1.19.1",
@@ -49,7 +52,8 @@
     "koa": "2.8.1",
     "koa-bodyparser": "4.2.1",
     "koa-router": "7.4.0",
-    "mysql2": "^1.6.5",
+    "lodash": "4.17.15",
+    "mysql2": "1.6.5",
     "sequelize": "5.16.0"
   }
 }
