--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -9,10 +9,13 @@ services:
       - ./init.sql:/docker-entrypoint-initdb.d/schema.sql:ro
   api:
     build:
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.dev
       context: ./
     ports:
       - "3000:3000"
+    volumes:
+      - /node_modules
+      - .:/app
     environment:
       - MYSQL_HOST=db
       - MYSQL_PORT=3306
