--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
       - "3306:3306"
     volumes:
       - ./init.sql:/docker-entrypoint-initdb.d/schema.sql:ro
+    environment:
+      - MYSQL_ROOT_PASSWORD=example
   api:
     build:
       dockerfile: Dockerfile
