--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,5 @@
 version: '3'
 services:
-  db:
-    image: mysql
-    restart: always
-    ports:
-      - "3306:3306"
-    volumes:
-      - ./init.sql:/docker-entrypoint-initdb.d/schema.sql:ro
-    environment:
-      - MYSQL_ROOT_PASSWORD=example
   api:
     build:
       dockerfile: Dockerfile
@@ -23,3 +14,14 @@ services:
       - MYSQL_PASSWORD=example
     depends_on:
       - db
+  db:
+    image: mysql:5.7.28
+    restart: always
+    ports:
+      - "3306:3306"
+    expose:
+      - '3306'
+    volumes:
+      - ./init.sql:/docker-entrypoint-initdb.d/schema.sql:ro
+    environment:
+      - MYSQL_ROOT_PASSWORD=example
