--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     build:
       dockerfile: Dockerfile
       context: ./
+    restart: always
     ports:
       - "3000:3000"
     environment:
