--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,7 @@ services:
     expose:
       - '3306'
     volumes:
-      - ./init.sql:/docker-entrypoint-initdb.d/schema.sql:ro
+      - ./init.sql:/docker-entrypoint-initdb.d/schema.sql
     environment:
       - MYSQL_ROOT_PASSWORD=example
+      - MYSQL_DATABASE=gym_notes
