refactoring via typeorm

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node --inspect=5858 -r ts-node/register ./src/server.ts",
     "start:watch": "nodemon",
-    "build": "tsc"
+    "build": "tsc",
+    "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js --config src/db/config.ts"
   },
   "repository": {
     "type": "git",
@@ -39,7 +40,6 @@
     "@types/koa-router": "7.0.42",
     "@types/lodash": "4.14.137",
     "@types/node": "12.7.2",
-    "@types/sequelize": "4.28.4",
     "@types/validator": "10.11.3",
     "eslint": "6.2.1",
     "eslint-plugin-import": "2.18.2",
@@ -54,6 +54,7 @@
     "koa-router": "7.4.0",
     "lodash": "4.17.15",
     "mysql2": "1.6.5",
-    "sequelize": "5.16.0"
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "0.2.24"
   }
 }
